[gd_scene load_steps=18 format=2]

[ext_resource path="res://fonts/rockford_sans/RockfordSans-Light.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Images/accept.png" type="Texture" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="DynamicFont" id=3]
size = 90
outline_color = Color( 0.0392157, 0.709804, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 90
outline_color = Color( 0.0392157, 0.709804, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 90
outline_color = Color( 0.0392157, 0.709804, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 90
outline_color = Color( 0.0392157, 0.709804, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 90
outline_color = Color( 0.0392157, 0.709804, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 90
outline_color = Color( 0.0392157, 0.709804, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 90
outline_color = Color( 0.0392157, 0.709804, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 90
outline_color = Color( 0.0392157, 0.709804, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 90
outline_color = Color( 0.0392157, 0.709804, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 90
outline_color = Color( 0.0392157, 0.709804, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 90
outline_color = Color( 0.0392157, 0.709804, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 90
outline_color = Color( 0.239216, 0.0627451, 0.0627451, 1 )
font_data = ExtResource( 1 )

[node name="Main_scene" type="Node2D"]
script = ExtResource( 2 )

[node name="Button_a" type="Button" parent="."]
margin_left = 60.0
margin_top = 226.027
margin_right = 210.0
margin_bottom = 376.027
theme = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "a"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_k" type="Button" parent="."]
margin_left = 290.0
margin_top = 226.027
margin_right = 440.0
margin_bottom = 376.027
custom_fonts/font = SubResource( 4 )
text = "k-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_s" type="Button" parent="."]
margin_left = 520.0
margin_top = 226.027
margin_right = 670.0
margin_bottom = 376.027
custom_fonts/font = SubResource( 5 )
text = "s-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_t" type="Button" parent="."]
margin_left = 60.0
margin_top = 446.027
margin_right = 210.0
margin_bottom = 596.027
custom_fonts/font = SubResource( 6 )
text = "t-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_n" type="Button" parent="."]
margin_left = 290.0
margin_top = 446.027
margin_right = 440.0
margin_bottom = 596.027
custom_fonts/font = SubResource( 7 )
text = "n-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_h" type="Button" parent="."]
margin_left = 520.0
margin_top = 446.027
margin_right = 670.0
margin_bottom = 596.027
custom_fonts/font = SubResource( 8 )
text = "h-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_m" type="Button" parent="."]
margin_left = 60.0
margin_top = 660.0
margin_right = 212.119
margin_bottom = 816.0
custom_fonts/font = SubResource( 9 )
text = "m-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_y" type="Button" parent="."]
margin_left = 290.0
margin_top = 666.027
margin_right = 440.0
margin_bottom = 816.027
custom_fonts/font = SubResource( 10 )
text = "y-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_r" type="Button" parent="."]
margin_left = 520.0
margin_top = 666.027
margin_right = 670.0
margin_bottom = 816.027
custom_fonts/font = SubResource( 11 )
text = "r-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_w" type="Button" parent="."]
margin_left = 160.0
margin_top = 886.027
margin_right = 310.0
margin_bottom = 1036.03
custom_fonts/font = SubResource( 12 )
text = "w-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_en" type="Button" parent="."]
margin_left = 390.0
margin_top = 886.027
margin_right = 540.0
margin_bottom = 1036.03
custom_fonts/font = SubResource( 13 )
text = "n"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept_button" type="Button" parent="."]
margin_left = 270.611
margin_top = 1095.29
margin_right = 429.611
margin_bottom = 1227.29
custom_fonts/font = SubResource( 14 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
playback_process_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.580392, 0.74902, 0.745098, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.7
[connection signal="pressed" from="Button_a" to="." method="_on_Button_a_pressed"]
[connection signal="pressed" from="Button_k" to="." method="_on_Button_k_pressed"]
[connection signal="pressed" from="Button_s" to="." method="_on_Button_s_pressed"]
[connection signal="pressed" from="Button_t" to="." method="_on_Button_t_pressed"]
[connection signal="pressed" from="Button_n" to="." method="_on_Button_n_pressed"]
[connection signal="pressed" from="Button_h" to="." method="_on_Button_h_pressed"]
[connection signal="pressed" from="Button_m" to="." method="_on_Button_m_pressed"]
[connection signal="pressed" from="Button_y" to="." method="_on_Button_y_pressed"]
[connection signal="pressed" from="Button_r" to="." method="_on_Button_r_pressed"]
[connection signal="pressed" from="Button_w" to="." method="_on_Button_w_pressed"]
[connection signal="pressed" from="Button_en" to="." method="_on_Button_en_pressed"]
[connection signal="pressed" from="Accept_button" to="." method="_on_Accept_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
